# Dynamic-Lang-Compiler

./: .gitignore  ASTContext.cpp  ASTContext.hpp  CMakeLists.txt  Makefile  MemoryKernel.cpp  MemoryKernel.hpp  Readme.md  ast.cpp  ast.hpp  builtin.cpp  builtin.hpp  kek.txt  lexer  lexer.cpp  parser.ypp  real_lexer.cpp
scripts/: test.sh
tests/: 1.nnl  10.nnl  11.nnl  12.nnl  13.nnl  14.nnl  15.nnl  2.nnl  3.nnl  4.nnl  5.nnl  6.nnl  7.nnl  8.nnl  9.nnl  err.1.nnl  err.2.nnl
tests/mem/: Makefile  test_mem.cpp
